[gd_scene load_steps=10 format=3 uid="uid://b7a5aaeilaif4"]

[ext_resource type="Script" uid="uid://bl8pt7mve5l48" path="res://music_player.gd" id="1_nkgi7"]
[ext_resource type="Texture2D" uid="uid://0nwljxi2uo0d" path="res://Hell/GUI/music_bar.png" id="2_k4xj7"]
[ext_resource type="Texture2D" uid="uid://dersei1n13niv" path="res://Hell/GUI/play_butons.png" id="3_p3pav"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a2ugy"]
atlas = ExtResource("3_p3pav")
region = Rect2(97, 0, 20, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3pav"]
atlas = ExtResource("3_p3pav")
region = Rect2(97, 12, 20, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8ia0"]
atlas = ExtResource("3_p3pav")
region = Rect2(86, 0, 11, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqnhx"]
atlas = ExtResource("3_p3pav")
region = Rect2(86, 12, 11, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjark"]
atlas = ExtResource("3_p3pav")
region = Rect2(117, 0, 11.9, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnyht"]
atlas = ExtResource("3_p3pav")
region = Rect2(117, 12, 11.9, 12)

[node name="MusicPlayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1772.0
offset_bottom = -987.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nkgi7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(68, 128)
scale = Vector2(4, 4)
texture = ExtResource("2_k4xj7")

[node name="PlayingLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 16.0
offset_top = 12.0
offset_right = 312.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 24
text = "Now playing"
clip_text = true

[node name="Play" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 205.0
offset_top = 61.0
offset_right = 295.0
offset_bottom = 92.0
focus_mode = 0
text = "Play Music"

[node name="Prevoius" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 176.0
offset_top = 61.0
offset_right = 203.0
offset_bottom = 92.0
focus_mode = 0
text = "<<"

[node name="Next" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 297.0
offset_top = 61.0
offset_right = 324.0
offset_bottom = 92.0
focus_mode = 0
text = ">>"

[node name="PlayButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 60.0
offset_right = 212.0
offset_bottom = 72.0
scale = Vector2(4, 4)
texture_normal = SubResource("AtlasTexture_a2ugy")
texture_pressed = SubResource("AtlasTexture_p3pav")

[node name="PreviousButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 148.0
offset_top = 60.0
offset_right = 159.0
offset_bottom = 72.0
scale = Vector2(4, 4)
texture_normal = SubResource("AtlasTexture_u8ia0")
texture_pressed = SubResource("AtlasTexture_nqnhx")

[node name="NextButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 272.0
offset_top = 60.0
offset_right = 283.0
offset_bottom = 72.0
scale = Vector2(4, 4)
texture_normal = SubResource("AtlasTexture_rjark")
texture_pressed = SubResource("AtlasTexture_vnyht")

[connection signal="pressed" from="Play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Prevoius" to="." method="_on_prevoius_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
